# chess_project

./: .gitignore  CMakeLists.txt
src/app/: ChessBoardWidget.cpp  ChessBoardWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/logic/: AttackDetector.cpp  AttackDetector.h  CastlingRights.h  Game.cpp  Game.h  GameState.cpp  GameState.h  MoveGenerator.cpp  MoveGenerator.h
src/main/: main.cpp
src/models/: Board.cpp  Board.h  Move.h  Pieces.h  Result.h  Square.h
src/notation/: Fen.cpp  Fen.h  Pgn.cpp  Pgn.h  San.cpp  San.h
